@@ -1,3 +1,10 @@
+2025-12-26  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-adb.el (tramp-adb-do-ls): New function.
+	(tramp-adb-handle-file-attributes)
+	(tramp-adb-handle-directory-files-and-attributes)
+	(tramp-adb-handle-file-name-all-completions): Use it.  (Bug#80054)
+
 2025-12-20  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-completion-handle-expand-file-name):
